# isetool

./: .flake8  .pylintrc  README.md  pyproject.toml
src/isetool/: cli.py  ise.py
tests/: test_isetool.py
