[tool.poetry]
name = "isetool"
version = "0.1.0"
description = "Command line for querying a Cisco ISE server"
authors = ["Rob Woodward <rob@emailplus.org>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/isetool"
include = ["README.md", "LICENSE"]

[[tool.poetry.source]]
name = "atsip02"
url = "http://atsip02.lon.osspriv.colt.net:8080/simple/"


[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
click = "^8.0.1"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pydocstyle = "^6.1.1"
flake8 = "^3.9.2"
pylint = "^2.9.5"
yapf = "^0.31.0"

[tool.poetry.scripts]
isetool = "isetool.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
