[tool.poetry]
name = "isetool"
version = "1.0.1"
description = "Command line for querying a Cisco ISE server"
authors = ["Rob Woodward <rob@emailplus.org>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/isetool"
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
click = "^8.0.1"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
pylint = "^2.9.5"
black = "^21.7b0"
pycodestyle = "^2.8.0"

[tool.poetry.scripts]
isetool = "isetool.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
