[tool.poetry]
name = "isetool"
version = "1.0.3"
description = "Command line for querying a Cisco ISE server"
authors = ["Rob Woodward <rob@emailplus.org>"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/robwdwd/isetool"
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
click = "^8.0.1"
urllib3 = "^1.26.6"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.1.3"
pylint = "^2.9.6"
pydocstyle = "^6.1.1"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
isetool = "isetool.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
